RESOLVED FIXED131675
REGRESSION(r165841): Messages sent before the child process is launched are never sent
https://bugs.webkit.org/show_bug.cgi?id=131675
Summary REGRESSION(r165841): Messages sent before the child process is launched are n...
Carlos Garcia Campos
Reported 2014-04-15 03:45:34 PDT
Since r165841, the connection is opened after the pending messages are sent, because connectionWillOpen might send messages that we want to happen after the ones already pending. The problem is that Connection::canSendOutgoingMessages() returns false when connection hasn't been opened (m_isConnected). So, I think we should not send any message before Connection::open(). This broke a lot of GTK+ unit tests since it's very common in unit tests to have messages sent before the web process has been launched. I think we can change connectionWillOpen, and use ConnectionDidOpen instead, called after Connection::open.
Attachments
Patch (4.74 KB, patch)
2014-04-15 04:51 PDT, Carlos Garcia Campos
no flags
Rebased patch (4.94 KB, patch)
2014-05-23 10:26 PDT, Carlos Garcia Campos
andersca: review+
Carlos Garcia Campos
Comment 1 2014-04-15 04:51:17 PDT
Created attachment 229366 [details] Patch I think we should ensure no messages are sent before the connection has been opened. This patch moves the visited link provider process initialization after the connection has been opened.
Alexey Proskuryakov
Comment 2 2014-04-15 10:09:00 PDT
Ryuan Choi
Comment 3 2014-04-16 10:35:59 PDT
This patch solved many crashes of layout tests/unit tests on the EFL port.
Carlos Garcia Campos
Comment 4 2014-04-23 23:46:27 PDT
Could someone review this, please? Otherwise I would suggest to rollout r165841.
Carlos Alberto Lopez Perez
Comment 5 2014-05-20 04:39:57 PDT
Csaba Osztrogonác
Comment 6 2014-05-20 04:58:50 PDT
I think it is a duplicate of Bug131037. Zsolt, could you check if this patch solves the problem you ran into with EFL perf bot in Bug131037. As far as I know r165841 is reverted locally on the EFL perf bot.
Zsolt Borbely
Comment 7 2014-05-21 07:34:35 PDT
I have double-checked, this patch solves the problem that was mentioned in https://bugs.webkit.org/show_bug.cgi?id=131037 Thanks.
Zsolt Borbely
Comment 8 2014-05-21 07:36:25 PDT
*** Bug 131037 has been marked as a duplicate of this bug. ***
Csaba Osztrogonác
Comment 9 2014-05-23 05:59:13 PDT
In my opinion, if more than a month wasn't enough for WK2 owners to review the fix for the regression they caused, we should simply revert r165841.
Martin Robinson
Comment 10 2014-05-23 09:50:43 PDT
(In reply to comment #9) > In my opinion, if more than a month wasn't enough for WK2 owners to review > the fix for the regression they caused, we should simply revert r165841. Perhaps we should just send a polite request to the mailing list asking for a review. It seems like this patch is quite important, as it's causing our bots to rot.
Carlos Alberto Lopez Perez
Comment 11 2014-05-23 10:04:39 PDT
(In reply to comment #4) > Could someone review this, please? The patch not longer applies on trunk. It needs to be rebased.
Carlos Garcia Campos
Comment 12 2014-05-23 10:24:14 PDT
(In reply to comment #11) > (In reply to comment #4) > > Could someone review this, please? > > The patch not longer applies on trunk. It needs to be rebased. Yes, now we have the same problem with the user content controller.
Carlos Garcia Campos
Comment 13 2014-05-23 10:26:33 PDT
Created attachment 231972 [details] Rebased patch
Anders Carlsson
Comment 14 2014-05-23 11:28:14 PDT
Comment on attachment 231972 [details] Rebased patch Patch looks good, please land it. If it turns out to be a problem for Mac we can roll it out and figure out a better way to solve it!
Carlos Garcia Campos
Comment 15 2014-05-24 00:18:30 PDT
Note You need to log in before you can comment on or make changes to this bug.